# bjjpunkte

./: .dockerignore  .env.example  .gitignore  Dockerfile  SEPA-AKTIVIERUNG.md  app.js  eslint.config.mjs  index.html  manifest.json  netlify.toml  next.config.ts  osss-gym-export-2026-05-03 (2).json  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  site.webmanifest  style.css  vercel.json  vitest.config.ts
.claude/: launch.json  settings.json
.github/: dependabot.yml
compliance/: GO-LIVE-CHECKLIST.md  README.md  avv-status.md  places-api-audit.md  security-audit-service-clients.md  verarbeitungsverzeichnis.md
docs/: CLOUDFLARE_WAF.md  HETZNER_CUTOVER.md  INKASSO_API_INTEGRATION.md  PHASE1_PHASE2_SETUP.md  epic-1-contract-management.md  migration-existing-members.md  seo-content-plan.md
public/: index.html  manifest.webmanifest  sales-crm-manifest.webmanifest
scripts/: check-iban-migration.ts  dump-schema.ts  encrypt-existing-ibans.ts  hetzner-hardening.sh  migrate-env-from-vercel.sh  migrate-signatures-to-storage.ts  render-contract-templates.tsx  smoke-test.sh  test-stripe-webhook-idempotency.ts
src/: instrumentation-client.ts  instrumentation.ts  middleware.ts  proxy.ts
tests/: csrf.test.ts  (+1 more)
tools/osss-audit/: Cargo.toml  README.md
tools/osss-audit/src/: crons.rs  env.rs  finding.rs  hydration.rs  infra.rs  main.rs  maintainability.rs  migrations.rs  model.rs  orphans.rs  perf.rs  pricing.rs  rls.rs  routes.rs  security.rs  testing.rs  todos.rs  util.rs  webhook.rs
(+404 files in other folders)
